file(GLOB_RECURSE SOURCES_FILES "${CMAKE_CURRENT_SOURCE_DIR}/**.cpp" "${CMAKE_CURRENT_SOURCE_DIR}/**.hpp")
add_library(DynamicLinkLibLoader SHARED ${SOURCES_FILES})
target_compile_definitions(DynamicLinkLibLoader PRIVATE LOADER_EXPORTS)
target_include_directories(DynamicLinkLibLoader PRIVATE "${CMAKE_SOURCE_DIR}/include")
target_include_directories(DynamicLinkLibLoader PRIVATE "${CMAKE_SOURCE_DIR}/schemas")
target_include_directories(DynamicLinkLibLoader PRIVATE "${CMAKE_SOURCE_DIR}/vendor/minhook/include")
target_compile_definitions(DynamicLinkLibLoader PRIVATE TARGET_LOG_NAME="dynalink${ARCH_BITS}")
target_link_libraries(DynamicLinkLibLoader PRIVATE "${CMAKE_SOURCE_DIR}/vendor/minhook/lib/libMinHook-${ARCH_NAME}-v141-mtd.lib")
set_target_properties(DynamicLinkLibLoader PROPERTIES OUTPUT_NAME "dynalink${ARCH_BITS}")